--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,13 @@
  *= require_tree .
  *= require_self
  */
+
+
+ *{ background-color: rgb(0, 85, 255);
+    text-decoration: none;
+    text-align: center;
+ }
+
+ div.actions, div{
+    background-color: hsla(0,0%,44.3%,.5215686275);
+ }  
